@@ -13,6 +13,7 @@ Changelog 0.8.1.1
 + resize the background of label controls
 [SA-00500] MediaPlayer: facebook like: extend the like function
 [SA-00436] Sally: volume change should show a PopUp
+[SA-00504] Sally: sort the apps in the apps selector by name
 
 
 Changelog 0.8.0.6
